# advent-of-code

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-test.yml
advent_of_code/year_2024/day_01/: Cargo.toml
advent_of_code/year_2024/day_01/src/: lib.rs
advent_of_code/year_2024/day_02/: Cargo.toml
advent_of_code/year_2024/day_02/src/: lib.rs
advent_of_code/year_2024/day_03/: Cargo.toml
advent_of_code/year_2024/day_03/src/: lib.rs
advent_of_code/year_2024/day_04/: Cargo.toml
advent_of_code/year_2024/day_04/src/: lib.rs
advent_of_code/year_2024/day_05/: Cargo.toml
advent_of_code/year_2024/day_05/src/: lib.rs
advent_of_code/year_2024/day_06/: Cargo.toml
advent_of_code/year_2024/day_06/src/: lib.rs
advent_of_code/year_2024/day_07/: Cargo.toml
advent_of_code/year_2024/day_07/src/: lib.rs
advent_of_code/year_2024/day_08/: Cargo.toml
advent_of_code/year_2024/day_08/src/: lib.rs
advent_of_code/year_2024/day_09/: Cargo.toml
advent_of_code/year_2024/day_09/src/: lib.rs
advent_of_code/year_2024/day_10/: Cargo.toml
advent_of_code/year_2024/day_10/src/: lib.rs
advent_of_code/year_2024/day_11/: Cargo.toml
advent_of_code/year_2024/day_11/src/: lib.rs
advent_of_code/year_2024/day_12/: Cargo.toml
advent_of_code/year_2024/day_12/src/: lib.rs
advent_of_code/year_2024/day_13/: Cargo.toml
advent_of_code/year_2024/day_13/src/: lib.rs
advent_of_code/year_2024/day_14/: Cargo.toml
advent_of_code/year_2024/day_14/src/: lib.rs
advent_of_code/year_2025/day_01/: Cargo.toml
advent_of_code/year_2025/day_01/src/: lib.rs
advent_of_code/year_2025/day_02/: Cargo.toml
advent_of_code/year_2025/day_02/src/: lib.rs
advent_of_code/year_2025/day_03/: Cargo.toml
advent_of_code/year_2025/day_03/src/: lib.rs
advent_of_code/year_2025/day_04/: Cargo.toml
advent_of_code/year_2025/day_04/src/: lib.rs
advent_of_code/year_2025/day_05/: Cargo.toml
advent_of_code/year_2025/day_05/src/: lib.rs
advent_of_code/year_2025/day_06/: Cargo.toml
advent_of_code/year_2025/day_06/src/: lib.rs
advent_of_code/year_2025/day_07/: Cargo.toml
advent_of_code/year_2025/day_07/src/: lib.rs
advent_of_code/year_2025/day_08/: Cargo.toml
advent_of_code/year_2025/day_08/src/: lib.rs
advent_of_code/year_2025/day_09/: Cargo.toml
advent_of_code/year_2025/day_09/src/: lib.rs
advent_of_code/year_2025/day_10/: Cargo.toml
advent_of_code/year_2025/day_10/src/: lib.rs
advent_of_code/year_2025/day_11/: Cargo.toml
advent_of_code/year_2025/day_11/src/: lib.rs
advent_of_code/year_2025/day_12/: Cargo.toml
advent_of_code/year_2025/day_12/src/: lib.rs
crates/aoc-libraries/: Cargo.toml
crates/aoc-libraries/src/: lib.rs
crates/aoc-macros/: Cargo.toml
crates/aoc-macros/src/types/: submission.rs
crates/aoc-utils/: Cargo.toml
crates/aoc-utils/src/traits/: generalised_output.rs  mod.rs
crates/aoc_libraries/: Cargo.toml
crates/aoc_libraries/src/: lib.rs
crates/aoc_libraries/src/core/: aoc_input.rs  aoc_output.rs  mod.rs
crates/aoc_libraries/src/utils/: mod.rs  test_environment.rs
crates/aoc_macros/: Cargo.toml
crates/aoc_macros/src/: lib.rs
crates/aoc_macros/src/types/: submission.rs
crates/aoc_template/: Cargo.toml
crates/aoc_template/src/: lib.rs
crates/aoc_utils/src/traits/: parsable_input.rs
src/: lib.rs  main.rs
src/commands/: generate.rs
src/utils/: fs.rs
