[workspace]
members = ["crates/*", "advent_of_code/year_2025/*"]
resolver = "3"

[workspace.package]
publish = false
license-file = "LICENSE.md"
description = "Random BS go stuffs for Advent of Code."
homepage = "https://github.com/swyrin/advent-of-code"
repository = "https://github.com/swyrin/advent-of-code"
readme = "README.md"
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
aoc_libraries = { path = "crates/aoc_libraries" }
aoc_macros = { path = "crates/aoc_macros" }
