[package]
name = "aoc_libraries"
edition.workspace = true
version.workspace = true

[dependencies]
aoc-parse = "0.2.18"
geo = "0.32.0"
good_lp = { version = "1.14.2", default-features = false, features = ["microlp"] }
itertools = "0.15.0"
pathfinding = "4.15.0"
petgraph = { version = "0.8.3", features = ["rayon"] }
range-set-blaze = "0.6.0"
