[package]
name = "year_2024_day_03"
publish.workspace = true
license-file.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
aoc_libraries.workspace = true
aoc_macros.workspace = true
